<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="380dp"
            android:background="@drawable/main_back_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/image"/>

        <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/month"
                android:layout_marginTop="130dp"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_marginStart="50dp"/>
        <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/month"
                android:id="@+id/cost"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:text="@string/cost"
                android:textSize="17sp"
                android:textColor="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:background="@drawable/main_back">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/bills"
                android:layout_marginTop="320dp"
                android:textSize="30sp"
                android:layout_marginStart="100dp"
                android:textColor="@color/black"/>
        <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:layout_marginStart="100dp"
                android:text="@string/day"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            app:fab_colorNormal="#5D7878"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>